Feat: Adicionando o endpoint responsável por retornar as categorias, bem como os testes unitários e teste de integração.